force-app/main/default/objects/Miniature__c/Miniature__c.object-meta.xml
<CustomObject>
    <label>Miniature</label>
    <nameField>
        <label>Miniature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Miniatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>