force-app/main/default/objects/Miniature__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <description>The game that the miniature is used for</description>
    <label>Game</label>
    <length>100</length>
    <type>Text</type>
</CustomField>