force-app/main/default/objects/Miniature__c/fields/Painted__c.field-meta.xml
<CustomField>
    <fullName>Painted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the miniature come painted?</description>
    <label>Painted?</label>
    <type>Checkbox</type>
</CustomField>